--- a/_posts/2010-08-31-外滩画报.md
+++ b/_posts/2010-08-31-外滩画报.md
@@ -1,5 +1,5 @@
 ---
-description: 杂志类应用中少有的针对ios设备重新设计版面的，而不是纸质杂志的简单扫描。
+description: 杂志类应用中少有的针对ios设备重新设计版面，而不是纸质杂志的简单扫描。
 layout: post
 results:
 - primaryGenreName: Lifestyle
