--- a/_posts/2016-04-08-益起邦.md
+++ b/_posts/2016-04-08-益起邦.md
@@ -1,5 +1,5 @@
 ---
-description: 帮同学打饭一块钱。小编觉得想法上比“饿了吗”不知道高到哪里去了。卖外卖的就那么几个，记个电话就可以，而同学几千，谁愿意帮你打饭也不一定，所以需要 app 来撮合。
+description: 帮同学打饭一块钱。小编觉得想法上比“饿了吗”不知道高到哪里去了。附近外卖就那么几个，记个电话就可以，而同学几千，谁愿意帮你打饭也不一定，所以需要 app 来撮合。
 layout: post
 results:
 - artistId: 1105811147
