--- a/_posts/2016-04-26-科研人.md
+++ b/_posts/2016-04-26-科研人.md
@@ -1,5 +1,5 @@
 ---
-description: 看得出来，真是科研人的思路，以为既然物理规律不会骗他，人也不会。
+description: 看得出来，真是科研人的思路，以为既然物理规律不会骗我，同理人也不会。
 layout: post
 results:
 - primaryGenreName: Productivity
