--- a/_posts/2016-05-04-V5_-_换个方式看世界.md
+++ b/_posts/2016-05-04-V5_-_换个方式看世界.md
@@ -1,5 +1,5 @@
 ---
-description: 搞笑 + 美女 + 鸡汤文。混在一起就有些不自在了。
+description: 搞笑 + 美女 + 鸡汤文。混在一起就有些不适应了。
 layout: post
 results:
 - primaryGenreName: Entertainment
