--- a/_posts/2016-05-02-柴扉.md
+++ b/_posts/2016-05-02-柴扉.md
@@ -1,5 +1,5 @@
 ---
-description: 之前此种程度文艺的 app 死了很多，是不是屌丝才会关注文艺情调，有钱就变坏了？
+description: 之前此种程度文艺的 app 死了很多，是不是屌丝才会文艺，有钱就变坏了？
 layout: post
 results:
 - artistId: 721642958
