--- a/_posts/2016-04-26-靓靓—豪哥美女最多的交友约会平台.md
+++ b/_posts/2016-04-26-靓靓—豪哥美女最多的交友约会平台.md
@@ -1,5 +1,5 @@
 ---
-description: 交友。颜值还可以，类似外围的外围，看到后来还是送礼物。
+description: 交友。颜值还可以，类似外围中的外围，看到后来还是送礼物。
 layout: post
 results:
 - primaryGenreName: Social Networking
