--- a/_posts/2016-05-05-Vector.im.md
+++ b/_posts/2016-05-05-Vector.im.md
@@ -1,5 +1,5 @@
 ---
-description: 群聊 app，技术上没问题。如果这是第一个群聊的 app 也没问题，如果现有的群聊 app 崩溃也没问题，否则就有问题了，谁会从现有的人多的转换过来？这就是国内目前为止火起来的社交 app 都和 qq 有关系的原因，因为 qq 是第一个中文聊天软件，当时要么不网聊，要么双方学英文用 icq，要么忍 bug。
+description: 群聊 app，技术上没问题。运营上如果这是第一个群聊的 app 也没问题，如果现有的群聊 app 经常崩溃也没问题，否则谁会从现有可用的人多的 app 转换过来？这就是国内目前为止火起来的社交 app 都和 qq 有关系的原因，因为 qq 是第一个中文聊天软件，初期即使有 bug，可要么不网聊，要么双方学英文用 icq 。。。
 layout: post
 results:
 - primaryGenreName: Social Networking
