--- a/_posts/2016-05-07-一起-我们共同的话题.md
+++ b/_posts/2016-05-07-一起-我们共同的话题.md
@@ -1,5 +1,5 @@
 ---
-description: 类似 bbs。打底数据不错，没人。看来互联网经过几年的无水平无底线拉客后，目前能吸引来用户只有性和钱了。
+description: 类似 bbs。打底数据不错，没人。看来国内经过这几年低底线烧钱拉客后，只有性、钱和下跪才可能吸引来用户了。
 layout: post
 results:
 - primaryGenreName: Social Networking
