--- a/_posts/2016-09-23-看帖神器.md
+++ b/_posts/2016-09-23-看帖神器.md
@@ -1,5 +1,5 @@
 ---
-description: 海外华人对祖国社会的理解基本停留在出国那一刻。80年代出国的是80年代的想法、90年代是90年代的想法。
+description: 海外华人对祖国社会的理解基本停留在出国那一刻。80年代出国的是80年代的想法、90年代的是90年代的想法。
 layout: post
 results:
 - primaryGenreName: News
