--- a/_posts/2017-03-13-楠楠直播.md
+++ b/_posts/2017-03-13-楠楠直播.md
@@ -1,5 +1,5 @@
 ---
-description: 楠楠直播，不是男男，实际上主播大多是女的。
+description: 楠楠，不是男男，实际上主播大多是女的。
 layout: post
 results:
 - primaryGenreName: Social Networking
