--- a/_posts/2017-03-24-美日记.md
+++ b/_posts/2017-03-24-美日记.md
@@ -1,5 +1,5 @@
 ---
-description: 不知道在这个堕胎还论次数的年代有人没有人写日记。界面不错。
+description: 不知道在这个堕胎都要论次数的年代还有没有人写日记。界面不错。
 layout: post
 results:
 - primaryGenreName: Lifestyle
